objects/dbu_Hero_Slider__c.object
<CustomObject>
    <fields>
        <fullName>dbu_Banner_Position__c</fullName>
        <description>Alignment of the Banner text</description>
        <label>Banner Position</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Right</fullName>
                </value>
                <value>
                    <fullName>Left</fullName>
                    <default>true</default>
                    <label>Left</label>
                </value>
                <value>
                    <fullName>Center</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dbu_Banner_Title__c</fullName>
        <description>Title on top oh the Hero banner</description>
        <inlineHelpText>Please follow the Cummins Style Guide while adding the description.</inlineHelpText>
        <label>Banner Title</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>dbu_Button_Text_color__c</fullName>
        <label>Button Text Color</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>White</fullName>
                    <default>true</default>
                    <label>White</label>
                </value>
                <value>
                    <fullName>Black</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dbu_Button_bg_color__c</fullName>
        <description>Background button colour for banner</description>
        <label>Button Bg Color</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                    <default>true</default>
                    <label>Red</label>
                </value>
                <value>
                    <fullName>Black</fullName>
                </value>
                <value>
                    <fullName>Grey</fullName>
                </value>
                <value>
                    <fullName>Blue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dbu_Button_font_size__c</fullName>
        <label>Button Font Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12 px</fullName>
                </value>
                <value>
                    <fullName>14 px</fullName>
                </value>
                <value>
                    <fullName>16 px</fullName>
                    <default>true</default>
                    <label>16 px</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dbu_Button_text__c</fullName>
        <description>Add a simple Button text not exceeding 20 characters.
Example (Shop| Promo | Watch Now | Clearance)</description>
        <inlineHelpText>Add a simple Button text not exceeding 20 characters.</inlineHelpText>
        <label>Button Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbu_Category_Link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Category lookup</description>
        <inlineHelpText>Category lookup</inlineHelpText>
        <label>Category Link</label>
        <referenceTo>ccrz__E_Category__c</referenceTo>
        <relationshipLabel>dbu Hero Sliders</relationshipLabel>
        <relationshipName>dbu_Hero_Sliders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>dbu_Link_Type__c</fullName>
        <description>The type of link that is used on the banner button</description>
        <inlineHelpText>The type of link that is used on the banner button</inlineHelpText>
        <label>Link Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Category</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>URL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dbu_New_Window__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the link should open in a new window</description>
        <inlineHelpText>If the link should open in a new window</inlineHelpText>
        <label>New Window</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dbu_Product_Link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product lookup</description>
        <inlineHelpText>Product lookup</inlineHelpText>
        <label>Product Link</label>
        <referenceTo>ccrz__E_Product__c</referenceTo>
        <relationshipLabel>dbu Hero Sliders</relationshipLabel>
        <relationshipName>dbu_Hero_Sliders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>dbu_banner_serial_number__c</fullName>
        <label>dbu banner serial number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dbu_description__c</fullName>
        <label>dbu description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dbu_header_message__c</fullName>
        <label>dbu header message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbu_href_url__c</fullName>
        <label>dbu href url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbu_slide_end_date__c</fullName>
        <label>dbu slide end date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dbu_slide_start_date__c</fullName>
        <label>dbu slide start date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dbu_src_img__c</fullName>
        <label>dbu src img</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dbu_store__c</fullName>
        <label>dbu store</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                </value>
                <value>
                    <fullName>EN</fullName>
                </value>
                <value>
                    <fullName>FR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dbu_sub_title__c</fullName>
        <label>DBU Sub title</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>dbu Hero Slider</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>dbu_href_url__c</columns>
        <columns>dbu_store__c</columns>
        <columns>dbu_slide_end_date__c</columns>
        <columns>dbu_slide_start_date__c</columns>
        <columns>dbu_header_message__c</columns>
        <columns>dbu_description__c</columns>
        <columns>dbu_src_img__c</columns>
        <columns>dbu_Banner_Title__c</columns>
        <columns>dbu_Button_text__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Banner - {0}</displayFormat>
        <label>dbu_homePageBanner Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>dbu Hero Sliders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>